plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.6' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
    id 'org.sonarqube' version '5.1.0.4882'
}

allprojects {
    group = 'com.sofit'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "sofit-backend"
        property "sonar.projectName", "sofit-backend"
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    dependencies {
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}
